# sermonindex-node

./: .gitignore  AUDIT-0.0.330-PLAN.md  DEPLOY-CHECKLIST.md  HANDOVER-0.0.330.md  POC-TORRENT.md  RUNNING-A-NODE.md  SECURITY.md  SOFTWARE-AUDIT.md  TECHNICAL-SETUP.md  TEST-BUILDS.md  UPDATER-SETUP.md  eslint.config.mjs  index.html  package-lock.json  package.json  seed-node-hardware-forum-post.md  sermonindex-node-intro-forum-post.md  vite.config.js
.github/workflows/: build.yml
canonical-output/: master-list.json.sig  upload-log.json
canonical-output/torrents/00/: -ET7WzSWu-T6UHem.torrent  00e59af457fadf09.torrent  07b59526775f512d.torrent  0BsvX8GHyj16i6Oh.torrent  1IcU7ZPxzMtuwwkn.torrent  1cfdfd0974316eca.torrent  2262f5c9b1e58b74.torrent  2DPmInVmYuN0xAcF.torrent  2d0e0f62052c056b.torrent  2d6bad5314a8c8f8.torrent  2sFxWDJ2SSqVtZgi.torrent  2yhpQ2pgMXoQqXaP.torrent  32Ok66S992u5RyC3.torrent  38-e9GoXvbR_vKtL.torrent  3e--HfZTs6Hyk8Lp.torrent  3f6CW6QrTKYyy7wM.torrent  42c8x4eRcLQnqilI.torrent  44a22576373300a8.torrent  46f65bf23aa09f02.torrent  493a6c21bb988751.torrent  4EiTTyEPJO2mLK8B.torrent  56f88140d4ff7c0f.torrent  5OqiJuZcM7RH1w6z.torrent  5sD0ve48GR_IJl4D.torrent  6444284ae7e105e8.torrent  64ca29265f107cdf.torrent  69fe990b17fff5d8.torrent  6UQZUG2BQntr7qIa.torrent  6d0d222ecaa07d8d.torrent  7c8eccdfb3e18044.torrent  7efab81e8f47ca14.torrent  7lke2jpAZ_g7MFEN.torrent  7zWcPO3g-nnT_qJd.torrent  87Oxv7VMEZfUnSc1.torrent  88TgywNsdkvP0GyR.torrent  89a8a16035b5598f.torrent  8Y9jWcBM7xiDrL02.torrent  9-z7wqQu1an3Hp0j.torrent  9QA6BQx7wmtH2NiD.torrent  B4EOTjZ8BT7vpuz8.torrent  (+94 more)
public/: geo.json
scripts/: cdn-video-files.json  deploy-installers.mjs  fetch-speaker-images.mjs  gen-masterlist-key.mjs  generate-canonical-torrents.mjs  publish-update.mjs  redownload-cdn-videos.mjs  redownload-log.json  redownload-unavailable.txt  redownload-vp9-transcoded.txt  release.mjs  release.secrets.example.json  remux-cdn-videos.mjs  remux-failures.txt  remux-log.json  reshard-hex.mjs  shard-canonical-output.mjs  sign-master-list.mjs  transcode-cdn-videos.mjs  transcode-failures.txt  transcode-log.json  transcode-vp9-list.txt  upload-canonical-torrents.mjs  watch-release.mjs
server/: Dockerfile  README.md  chat-edge-script.js  chat-server.mjs  chat-server.php  network-edge-script.js  seed-admin-dashboard.html  si-app-dashboard.ts
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bitswap.rs  ipfs_node.rs  lib.rs  natpmp.rs  torrent_node.rs  unixfs.rs
src/components/: CgnatNotice.jsx  ConditionsModal.jsx  ConnectionsPanel.jsx  DonateBanner.jsx  DownloadFailures.jsx  ImageContextMenu.jsx  ImpactPanel.jsx  PlayerBar.jsx  ReachabilityBanner.jsx  Sidebar.jsx  SpeakerAvatar.jsx  TopBar.jsx  UpdatePrompt.jsx
src/data/: catalog.json  conditions.jsx
src/pages/: AboutPage.jsx  BulkDownloadPage.jsx  CommunityPage.jsx  ConnectionsPage.jsx  DashboardPage.jsx  DownloadsPage.jsx  LibraryPage.jsx  NetworkPage.jsx  SeedNodePage.jsx  SettingsPage.jsx  StatsPage.jsx
src/services/: catalog.js  chatNotify.js  constants.js  downloadManager.js  heartbeat.js  ipfs.js  network.js  nodeMapStore.js  tauriStore.js  torrent.js  updater.js
src/utils/: nodeStatus.js  time.js
(+33167 files in other folders)
