[package]
name = "sermonindex-app"
version = "1.0.0"
description = "SermonIndex Sermon Library — Decentralized P2P sermon sharing"
authors = ["SermonIndex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
dirs = "5"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

# ── BitTorrent node (librqbit — the engine behind rqbit) ──
# Mainline DHT + trackers + UPnP. Replaces the hand-rolled IPFS stack.
librqbit = "8"
url = "2"
urlencoding = "2"

# ── Native IPFS / libp2p node ──
# Runs a real TCP+QUIC libp2p node that public gateways can reach
libp2p = { version = "0.54", default-features = false, features = [
  "tokio",
  "tcp",
  "quic",
  "dns",
  "websocket",
  "noise",
  "yamux",
  "kad",
  "identify",
  "ping",
  "relay",
  "dcutr",
  "autonat",
  "upnp",
  "mdns",
  "rendezvous",
  "request-response",
  "macros",
  "serde",
  "rsa",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
multihash = "0.19"
cid = "0.11"
sha2 = "0.10"
unsigned-varint = "0.8"
prost = "0.12"
bytes = "1"
async-trait = "0.1"
# NAT-PMP + PCP port mapping — alternative to UPnP for routers that don't support it
# Tries NAT-PMP (RFC 6886) first, then PCP (RFC 6887) — covers most modern routers
crab_nat = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
