[package]
name = "sermonindex-app"
version = "1.0.0"
description = "SermonIndex Sermon Library — Decentralized P2P sermon sharing"
authors = ["SermonIndex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
dirs = "5"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

# ── BitTorrent node (librqbit — the engine behind rqbit) ──
# Mainline DHT + trackers + UPnP. Replaces the hand-rolled IPFS stack.
librqbit = "8"
url = "2"
urlencoding = "2"
# NAT-PMP + PCP port mapping — succeeds on many routers where UPnP is off/unsupported
crab_nat = "0.2"
# Native HTTP fetch for the master list (webview fetch is blocked by CDN CORS)
reqwest = "0.12"
# Prevent two copies running at once (duplicate instances corrupt session state)
tauri-plugin-single-instance = "2"

tokio = { version = "1", features = ["full"] }
